# SiNEAR_2022_Roketo

./: README.md
app/assets/stylesheets/: application.bootstrap.scss
app/controllers/: freelancers_controller.rb  hirers_controller.rb
app/helpers/: application_helper.rb  freelancers_helper.rb  hirers_helper.rb  users_helper.rb
app/javascript/controllers/: hire_controller.js  nav_controller.js  stoppedbyowner_controller.js  stream_controller.js
app/javascript/custom/: main.js
app/models/: freelancer.rb
app/views/freelancers/: _active_work.html.erb  _define_work.html.erb  _pending_work.html.erb  profile.html.erb
app/views/hirers/: _active_work.html.erb  _bookmark_work.html.erb  _done_work.html.erb  _hire_now.html.erb  _pending_work.html.erb  cards.html.erb  hiring.html.erb  profile.html.erb
app/views/layouts/: _footer.html.erb  _header.html.erb  application.html.erb
app/views/searches/: search.html.erb
config/: credentials.yml.enc  importmap.rb  routes.rb
contract/: README.md  wasm-opt
contract/roketo_helper/: Cargo.toml  build.sh  redeploy.sh
contract/roketo_helper/res/: output_s.wasm
contract/roketo_helper/src/: lib.rs
db/: schema.rb
db/migrate/: 20220506061708_create_freelancers.rb  20220509062700_freelancers_for_hire.rb
test/controllers/: freelancers_controller_test.rb  hirers_controller_test.rb  searches_controller_test.rb  static_pages_controller_test.rb  users_controller_test.rb
test/fixtures/: freelancers.yml
test/integration/: freelancers_edit_test.rb  site_layout_test.rb
test/models/: freelancer_test.rb
(+2 files in other folders)
